# Decoder

./: .gitmodules  CMakeLists.txt  README.md
src/: .clang-format  CMakeLists.txt
src/common/: CMakeLists.txt  assert.h  common_types.h  file_util.cpp  file_util.h  generator.cpp  generator.h  timer.cpp  timer.h
src/common/npy/: cnpy.cpp  cnpy.h
src/config/: CMakeLists.txt  config.cpp  config.h  settings.cpp  settings.h
src/core/: CMakeLists.txt  STCEncoder.cpp  STCEncoder.h  decoder.cpp  decoder.h  matcher.cpp  matcher.h
src/main/: CMakeLists.txt  config.json  main.cpp
